--- a/index.html
+++ b/index.html
@@ -11,34 +11,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>maplibre-gl-mock-geolocate</title>
     </head>
-    <body>
-        <p>
-            A MapLibre GL JS control that displays a user position marker at
-            specified coordinates without requiring the browser's
-            <a
-                href="https://developer.mozilla.org/en-US/docs/Web/API/Geolocation_API"
-                target="_blank"
-                rel="noopener"
-                >geolocation API</a
-            >. Provides the same visual appearance as the built-in
-            <a
-                href="https://maplibre.org/maplibre-gl-js/docs/API/classes/GeolocateControl/"
-                target="_blank"
-                rel="noopener"
-                >`GeolocateControl`</a
-            >
-            with complete control over positioning.
-        </p>
-        <p>
-            See
-            <a
-                href="https://github.com/MIERUNE/maplibre-gl-mock-geolocate"
-                target="_blank"
-                rel="noopener"
-                >github.com/MIERUNE/maplibre-gl-mock-geolocate</a
-            >
-            for more details.
-        </p>
+    <body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;">
+        <!-- Map container will be created by main.ts -->
+        
+        <!-- Demo info overlay -->
+        <div id="info" style="
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 10px 15px;
+            border-radius: 6px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            font-size: 12px;
+            max-width: 300px;
+            z-index: 1000;
+        ">
+            <strong>🧪 MockGeolocateControl Demo</strong><br>
+            <small>Click the location button (top-right) or use demo buttons to test positioning without browser geolocation.</small>
+        </div>
+        
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
