--- a/index.html
+++ b/index.html
@@ -11,26 +11,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>maplibre-gl-mock-geolocate</title>
     </head>
-    <body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;">
+    <body
+        style="
+            margin: 0;
+            padding: 0;
+            font-family:
+                -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;,
+                sans-serif;
+        "
+    >
         <!-- Map container will be created by main.ts -->
-        
-        <!-- Demo info overlay -->
-        <div id="info" style="
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            background: rgba(255, 255, 255, 0.95);
-            padding: 10px 15px;
-            border-radius: 6px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            font-size: 12px;
-            max-width: 300px;
-            z-index: 1000;
-        ">
-            <strong>🧪 MockGeolocateControl Demo</strong><br>
-            <small>Click the location button (top-right) or use demo buttons to test positioning without browser geolocation.</small>
-        </div>
-        
+
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
