Trigger mock geolocate on preset selection

--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
                         <input id="lat-input" class="panel-input" type="number" step="0.000001" required />
                     </fieldset>
 
-                    <div class="panel-actions">
-                        <button type="submit" class="panel-button">Update location</button>
-                        <button type="button" id="trigger-button" class="panel-button panel-button--secondary">
-                            Center map
-                        </button>
-                    </div>
+                    <p class="panel-hint">
+                        Enter any coordinates and press <kbd>Enter</kbd> to trigger the
+                        mock control.
+                    </p>
                 </form>
             </aside>
 
