Restore coordinate entry hint

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                         <label class="panel-label" for="lat-input">Latitude</label>
                         <input id="lat-input" class="panel-input" type="number" step="0.000001" required />
                     </fieldset>
+
+                    <p class="panel-hint">
+                        Enter coordinates and press <kbd>Enter</kbd> to center the map.
+                    </p>
                 </form>
             </aside>
 
