--- a/index.html
+++ b/index.html
@@ -45,24 +45,44 @@
 
         <div class="app-layout">
             <aside class="control-panel" aria-label="Mock geolocate controls">
-                <h2 class="panel-title">Location presets</h2>
-                <label class="panel-label" for="preset-select">Choose a city</label>
+                <h2 class="panel-title">Location</h2>
                 <select id="preset-select" class="panel-input">
                     <option value="custom">Custom coordinates</option>
                 </select>
 
-                <form id="coordinate-form" class="coordinate-form" autocomplete="off">
+                <form
+                    id="coordinate-form"
+                    class="coordinate-form"
+                    autocomplete="off"
+                >
                     <fieldset class="panel-fieldset">
                         <legend class="panel-legend">Coordinates</legend>
-                        <label class="panel-label" for="lng-input">Longitude</label>
-                        <input id="lng-input" class="panel-input" type="number" step="0.000001" required />
+                        <label class="panel-label" for="lng-input"
+                            >Longitude</label
+                        >
+                        <input
+                            id="lng-input"
+                            class="panel-input"
+                            type="number"
+                            step="0.000001"
+                            required
+                        />
 
-                        <label class="panel-label" for="lat-input">Latitude</label>
-                        <input id="lat-input" class="panel-input" type="number" step="0.000001" required />
+                        <label class="panel-label" for="lat-input"
+                            >Latitude</label
+                        >
+                        <input
+                            id="lat-input"
+                            class="panel-input"
+                            type="number"
+                            step="0.000001"
+                            required
+                        />
                     </fieldset>
 
                     <p class="panel-hint">
-                        Enter coordinates and press <kbd>Enter</kbd> to center the map.
+                        Enter coordinates and press <kbd>Enter</kbd> to center
+                        the map.
                     </p>
                 </form>
             </aside>
