Add trigger button for manual coordinates

--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
                         />
                     </fieldset>
 
-                    <p class="panel-hint">
-                        Enter coordinates and press <kbd>Enter</kbd> to center
-                        the map.
-                    </p>
+                    <button type="submit" class="panel-button">Trigger</button>
                 </form>
             </aside>
 
