Change the sidepane heading text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="app-layout">
             <aside class="control-panel" aria-label="Mock geolocate controls">
-                <h2 class="panel-title">Location</h2>
+                <h2 class="panel-title">Position</h2>
                 <select id="preset-select" class="panel-input">
                     <option value="custom">Custom coordinates</option>
                 </select>
