Add divider spacing between control sections

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </form>
                 </section>
 
-                <section class="panel-section" aria-label="Accuracy settings">
+                <section class="panel-section panel-section--spaced" aria-label="Accuracy settings">
                     <h2 class="panel-title">Accuracy</h2>
 
                     <label class="panel-toggle" for="accuracy-toggle">
