--- a/index.html
+++ b/index.html
@@ -110,6 +110,71 @@
                         value="50"
                     />
                 </section>
+
+                <section class="panel-section panel-section--spaced" aria-label="Fit bounds options">
+                    <h2 class="panel-title">FitBoundsOptions</h2>
+                    <p class="panel-caption">
+                        Updates the auto-zoom behavior options. <a
+                            href="https://github.com/MIERUNE/maplibre-gl-mock-geolocate?tab=readme-ov-file#auto-zoom-configuration"
+                            target="_blank"
+                            rel="noopener"
+                        >Learn more</a>
+                    </p>
+
+                    <label class="panel-label" for="fitbounds-maxzoom">maxZoom</label>
+                    <input
+                        id="fitbounds-maxzoom"
+                        class="panel-input"
+                        type="number"
+                        min="0"
+                        max="22"
+                        step="0.1"
+                        value="15"
+                    />
+
+                    <label class="panel-label" for="fitbounds-padding">padding (px)</label>
+                    <input
+                        id="fitbounds-padding"
+                        class="panel-input"
+                        type="number"
+                        min="0"
+                        max="400"
+                        step="5"
+                        value="20"
+                    />
+
+                    <div class="panel-input-row">
+                        <div class="panel-input-col">
+                            <label class="panel-label" for="fitbounds-offset-x">offset X (px)</label>
+                            <input
+                                id="fitbounds-offset-x"
+                                class="panel-input"
+                                type="number"
+                                min="-400"
+                                max="400"
+                                step="5"
+                                value="0"
+                            />
+                        </div>
+                        <div class="panel-input-col">
+                            <label class="panel-label" for="fitbounds-offset-y">offset Y (px)</label>
+                            <input
+                                id="fitbounds-offset-y"
+                                class="panel-input"
+                                type="number"
+                                min="-400"
+                                max="400"
+                                step="5"
+                                value="0"
+                            />
+                        </div>
+                    </div>
+
+                    <label class="panel-toggle" for="fitbounds-linear">
+                        <input id="fitbounds-linear" type="checkbox" />
+                        <span>Use `easeTo` (linear) animation</span>
+                    </label>
+                </section>
             </aside>
 
             <!-- Map container -->
