Style fitBounds linear toggle caption

--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
 
                     <label class="panel-toggle" for="fitbounds-linear">
                         <input id="fitbounds-linear" type="checkbox" />
-                        <span>Use `easeTo` (linear) animation</span>
+                        <span>
+                            Use <code class="panel-code">easeTo</code> (linear) animation
+                        </span>
                     </label>
                 </section>
             </aside>
