--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                         <input id="fitbounds-linear" type="checkbox" />
                         <span>
                             Use <code class="panel-code">easeTo</code> (linear) animation
+                            instead of the default <code class="panel-code">flyTo</code>
                         </span>
                     </label>
                 </section>
